AUX_SOURCE_DIRECTORY (${CMAKE_CURRENT_SOURCE_DIR} RCS_GRAPHICS_SRCS)
ADD_LIBRARY(RcsGraphics ${LIBRARY_LINKING_TYPE} ${RCS_GRAPHICS_SRCS})

TARGET_INCLUDE_DIRECTORIES(RcsGraphics PUBLIC
    # Header source location
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    
    # Header install location
    $<INSTALL_INTERFACE:include/RcsGraphics>
    
    # Regular dependencies
    ${OPENSCENEGRAPH_INCLUDE_DIRS}
)

IF(USE_OCTOMAP)
  TARGET_INCLUDE_DIRECTORIES(RcsGraphics SYSTEM PRIVATE ${OCTOMAP_INCLUDE_DIR})
  TARGET_COMPILE_DEFINITIONS(RcsGraphics PRIVATE ${OCTOMAP_DEFINITIONS})
ENDIF(USE_OCTOMAP)

TARGET_LINK_LIBRARIES(RcsGraphics RcsCore ${OPENSCENEGRAPH_LIBRARIES})

# Mark for export
RCS_ADD_EXPORT_LIBRARY(RcsGraphics)

# Installation
# Headers
INSTALL(
  DIRECTORY . 
  DESTINATION include/RcsGraphics
  FILES_MATCHING PATTERN "*.h"
)
# Install the binaries
INSTALL(TARGETS RcsGraphics EXPORT RcsExport DESTINATION lib)
