SET(RCS_PHYSICS_SRCS
  PhysicsFactory.cpp)

IF(NOT HEADLESS_BUILD)
  LIST(APPEND RCS_PHYSICS_SRCS 
       ContactsNode.cpp 
       ForceDragger.cpp
       PhysicsNode.cpp)
ENDIF()

IF(USE_BULLET)
  LIST(APPEND RCS_PHYSICS_SRCS 
    BulletDistance.cpp
    BulletHelpers.cpp
    BulletHingeJoint.cpp
    BulletRigidBody.cpp
    BulletSimulation.cpp)
  IF(NOT HEADLESS_BUILD)
    LIST(APPEND RCS_PHYSICS_SRCS
      BulletDebugDrawer.cpp)
  ENDIF(NOT HEADLESS_BUILD)
ENDIF(USE_BULLET)

IF(USE_VORTEX)
  SET(VX_SRCS 
    VortexHelpers.cpp
    VortexSimulation.cpp)
  SET_SOURCE_FILES_PROPERTIES(${VX_SRCS} PROPERTIES COMPILE_FLAGS -std=c++11) 
  SET(RCS_PHYSICS_SRCS ${RCS_PHYSICS_SRCS} ${VX_SRCS})
ENDIF(USE_VORTEX)


ADD_LIBRARY(RcsPhysics ${LIBRARY_LINKING_TYPE} ${RCS_PHYSICS_SRCS})
TARGET_INCLUDE_DIRECTORIES(RcsPhysics PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_LINK_LIBRARIES(RcsPhysics RcsCore)

IF(NOT HEADLESS_BUILD)
  TARGET_LINK_LIBRARIES(RcsPhysics RcsGraphics)
ELSE()
  TARGET_COMPILE_DEFINITIONS(RcsPhysics PRIVATE -DHEADLESS_BUILD)
ENDIF()

IF(USE_BULLET)
  TARGET_INCLUDE_DIRECTORIES(RcsPhysics SYSTEM PRIVATE ${BULLET_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(RcsPhysics ${BULLET_LIBRARIES})
  TARGET_COMPILE_DEFINITIONS(RcsPhysics PRIVATE ${BULLET_DEFINITIONS})
ENDIF(USE_BULLET)

IF(USE_VORTEX)
  TARGET_INCLUDE_DIRECTORIES(RcsPhysics SYSTEM PRIVATE ${VORTEX_INCLUDE_DIR})
  TARGET_LINK_LIBRARIES(RcsPhysics ${VORTEX_LIBRARIES})
  TARGET_COMPILE_DEFINITIONS(RcsPhysics PRIVATE ${VORTEX_DEFINITIONS})
ENDIF(USE_VORTEX)


IF(USE_BULLET)
  ADD_EXECUTABLE(ExampleBullet ExampleBullet.cpp)
  TARGET_LINK_LIBRARIES(ExampleBullet RcsPhysics)
  TARGET_INCLUDE_DIRECTORIES(ExampleBullet SYSTEM PRIVATE ${BULLET_INCLUDE_DIRS})
  TARGET_COMPILE_DEFINITIONS(RcsPhysics PRIVATE -DUSE_BULLET)
ENDIF(USE_BULLET)

